--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "1.0.4",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.5.1",
+    "formidable": "^3.5.4",
     "html2canvas": "latest",
     "input-otp": "1.4.1",
     "jspdf": "latest",
@@ -69,6 +70,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
