--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.812.0",
+    "@google-cloud/storage": "^7.16.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -49,6 +50,8 @@
     "cmdk": "1.0.4",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.5.1",
+    "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "formidable": "^3.5.4",
     "html2canvas": "latest",
     "input-otp": "1.4.1",
